--- a/src/Backend/Nager.AuthenticationService.WebApi/Properties/launchSettings.json
+++ b/src/Backend/Nager.AuthenticationService.WebApi/Properties/launchSettings.json
@@ -1,14 +1,5 @@
 {
   "profiles": {
-    "Nager.Authentication.TestProject.WebApp6": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5234"
-    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
@@ -16,6 +7,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Nager.AuthenticationService..WebApi": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5234"
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
