--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "authentication-demo",
+  "name": "authentication-service",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Authentication Demo",
+  "description": "The authentication to secure your service",
+  "productName": "Nager Authentication Service",
   "author": "Tino Hager <tino.hager@nager.at>",
   "private": true,
   "scripts": {
