--- a/src/Backend/Nager.AuthenticationService.WebApi/appsettings.json
+++ b/src/Backend/Nager.AuthenticationService.WebApi/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Database=WebApp6;User Id=sa;Password=yourStrong(!)Password;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+    "Default": "Server=127.0.0.1;Database=AuthenticationService;User Id=sa;Password=yourStrong(!)Password;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Authentication": {
     "Tokens": {
       "Issuer": "Issuer.PLEASE.CHANGE.ME",
       "Audience": "Audience.PLEASE.CHANGE.ME",
-      "SigningKey": "SigningKey.PLEASE.CHANGE.ME"
+      "SigningKey": "The.SigningKey.ForUserData.PLEASE.CHANGE.ME"
     }
   }
 }
