--- a/src/Backend/Nager.AuthenticationService.WebApi/Properties/launchSettings.json
+++ b/src/Backend/Nager.AuthenticationService.WebApi/Properties/launchSettings.json
@@ -1,14 +1,6 @@
 {
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Nager.AuthenticationService..WebApi": {
+    "Nager.AuthenticationService.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
@@ -18,13 +10,5 @@
       "applicationUrl": "http://localhost:5234"
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:60638",
-      "sslPort": 0
-    }
-  }
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
