--- a/src/Backend/Nager.AuthenticationService.WebApi/appsettings.json
+++ b/src/Backend/Nager.AuthenticationService.WebApi/appsettings.json
@@ -15,6 +15,10 @@
       "Issuer": "Issuer.PLEASE.CHANGE.ME",
       "Audience": "Audience.PLEASE.CHANGE.ME",
       "SigningKey": "The.SigningKey.ForUserData.PLEASE.CHANGE.ME"
+    },
+    "InitialUser": {
+      "EmailAddress": "admin@domain.com",
+      "Password": "password"
     }
   }
 }
