--- a/src/Backend/Nager.AuthenticationService.WebApi/appsettings.json
+++ b/src/Backend/Nager.AuthenticationService.WebApi/appsettings.json
@@ -14,7 +14,7 @@
     "Tokens": {
       "Issuer": "Issuer.PLEASE.CHANGE.ME",
       "Audience": "Audience.PLEASE.CHANGE.ME",
-      "SigningKey": "The.SigningKey.ForUserData.PLEASE.CHANGE.ME"
+      "SigningKey": "The.SigningKey.ForUserData.PLEASE.CHANGE.ME.REQUIRE.A.128.BIT.KEY"
     },
     "InitialUser": {
       "EmailAddress": "admin@domain.com",
