update swagger path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
       AUTHENTICATION__TOKENS__ISSUER: ChangeMe
       AUTHENTICATION__TOKENS__AUDIENCE: ChangeMe
-      AUTHENTICATION__TOKENS__SIGNINGKEY: ChangeMe
+      AUTHENTICATION__TOKENS__SIGNINGKEY: The.SigningKey.ForUserData.PLEASE.CHANGE.ME.REQUIRE.A.128.BIT.KEY
     ports:
       - 80:8080
     depends_on:
