--- a/src/Backend/Nager.AuthenticationService.WebApi/Nager.AuthenticationService.WebApi.csproj
+++ b/src/Backend/Nager.AuthenticationService.WebApi/Nager.AuthenticationService.WebApi.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="GoogleAuthenticator" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
